syntax="proto3";

option java_multiple_files = true; //Разделять скоимплированные джава классы
option java_package = "van.karm.auction"; //Package для сгенерированных классов (обычно соответствующий структуре модуля)
option java_outer_classname = "AuctionServiceMessages"; //Это имя "оболочки" (outer class) для всех сгенерированных классов

import "google/protobuf/timestamp.proto";

service AuctionService {
  rpc GetAuctionInfo (GetAuctionRequest) returns (GetAuctionResponse);
}

message GetAuctionRequest {
  string auctionId = 1;
}

message GetAuctionResponse {
  string id = 1;
  Money startPrice = 2;
  Money bidIncrement = 3;
  bool isPrivate = 5;
  string status = 6;
  string currency = 9;
  Money lastBidAmount = 10;
}

message Money {
  int64 units = 1;
  int32 scale = 2;
}
